Updates from Overleaf

--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -4058,6 +4058,28 @@ booktitle={Phylogenetic Methods and the Prehistory of Languages}
   number = {8}
 }
 
+@article{liu2022ancient,
+  title={Ancient DNA reveals five streams of migration into Micronesia and matrilocality in early Pacific seafarers},
+  author={Liu, Yue-Chen and Hunter-Anderson, Rosalind and Cheronet, Olivia and Eakin, Joanne and Camacho, Frank and Pietrusewsky, Michael and Rohland, Nadin and Ioannidis, Alexander and Athens, J Stephen and Douglas, Michele Toomay and others},
+  journal={Science},
+  volume={377},
+  number={6601},
+  pages={72--79},
+  year={2022},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{roberts2020chield,
+  title={CHIELD: the causal hypotheses in evolutionary linguistics database},
+  author={Roberts, Se{\'a}n G and Killin, Anton and Deb, Angarika and Sheard, Catherine and Greenhill, Simon J and Sinnem{\"a}ki, Kaius and Segovia-Mart{\'\i}n, Jos{\'e} and N{\"o}lle, Jonas and Berdicevskis, Aleksandrs and Humphreys-Balkwill, Archie and          Hannah Little and  Christopher Opie and  Guillaume Jacques and  Lindell Bromham and  Peeter Tinits and  Robert M Ross and  Sean Lee and  Emily Gasser and  Jasmine Calladine and  Matthew Spike and  Stephen Francis Mann and  Olena Shcherbakova and  Ruth Singer and  Shuya Zhang and  Antonio Benítez-Burraco and  Christian Kliesch and  Ewan Thomas-Colquhoun and  Hedvig Skirgård and  Monica Tamariz and  Sam Passmore and  Thomas Pellard and  Fiona Jordan} ,
+  journal={Journal of Language Evolution},
+  volume={5},
+  number={2},
+  pages={101--120},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
 @book{roger1981cultural,
   title = {Cultural {{Anthropology}}. {{A}} {{Contemporary Perspective}}},
   author = {Keesing, Roger M and  Strathern, Andrew J.},
