--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,3 +1,33 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%% README %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%% Message to colleagues accessing this document, such as Russell (G), Russell (B), Stephen, Angela, Simon, Mary etc.
+%% If you have the time and feel generous, you are welcome to read through and give comments on this document.
+
+%% Thank you for your time, knowledge and patience.
+
+%%%%%%%%%%%%%%%%%%%%%% HOW TO COMMENT %%%%%%%%%%%%%%%%%%%%%%%%
+%% Here are instructions for how to add a comment in Overleaf's online collaborative interface: https://www.overleaf.com/learn/how-to/How_to_make_comments_in_an_Overleaf_LaTeX_project#Commenting:_feature_overview
+
+%% If you wish to leave comments directly in the latex code, you can. Please start such comments with %#comment #STEPHEN (or other name). That way I can easily find them.
+
+%% The comment character in Latex is "%". Any line that starts with % will not be rendered in the document. 
+
+%% If you download the document as a PDF and make comments that way, the easiest on my end is if you write comments in a txt-file and use reference points as "the paragraph starting with <...>". Page numbers can work, but may change if sections or images are moved around. If you use a PDF annotation, if you could please use Preview because other programs tend to crash or otherwise cause problems I am afraid. I am unfortunately speaking from experience.
+
+%%%%%%%%%%%%%%%%%%%%%% OTHER %%%%%%%%%%%%%%%%%%%%%%%%
+%% This latex document lives on a GitHub repository: https://github.com/HedvigS/predicting_number_lgs_in_remote_oceania
+%% You can see all the analysis code and functions for the paper there as well.
+
+%% AGAIN: THANK YOU :D
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
 \documentclass[a4paper,10pt]{article} % Artikel med 12pt text och A4 storlek.
 %\documentclass[draft,10pt]{article} % Artikel med 12pt text och A4 storlek.
 \usepackage[english]{babel} % Svensk avstavning istället för engelsk
@@ -149,32 +179,28 @@ Remote Oceania comprises the eastern Solomon Islands (Temotu), Vanuatu, New Cale
 %\doublespacing
 Why are there more languages in some places than others? The number of languages in the world is not equally distributed over its population. In the modern country of Papua New Guinea, there are 835 languages and 7 million people \citep{ethnologue22, cia_world_factbook_2019, glottolog4_5}. However, in South Korea there are only two indigenous spoken languages in a population of 51 million people. How can this be?
 
-Understanding the mechanics of language change and diversification is essential to understanding human history. Language is interlinked with cultural identity, learning about the historical dynamics of language informs our understanding of our story generally. The question of language splitting in particular is interesting as it represents community splitting. This research topic has received a lot of attention in recent years (c.f. \citet{gavin2017process,  greenhill2015demographic, Pacheco_Coelho_2019, hua2019ecological}). In this study we will take a closer look specifically at Remote Oceania. 
+Understanding the mechanics of language change and diversification is essential to understanding human history. Language is interlinked with cultural identity, learning about the historical dynamics of language informs our understanding of our story generally. The question of language splitting in particular is interesting as it represents community splitting. This research topic has received a lot of attention in recent years (c.f. \citet{gavin2017process,  greenhill2015demographic, Pacheco_Coelho_2019, hua2019ecological}). In this study, we will take a closer look specifically at the region of Remote Oceania. 
 
-Fig.~\ref{RO_overnight_coloured_dots} shows islands of Oceania. Languages are points, coloured by language family. In the Polynesian islands (S\={a}moa, Tonga, Rarotonga, Tokelau etc) there is generally one language per island group. However, in central west Remote Oceania (Vanuatu, Temotu, Fiji and Kanaky) there are many more languages, sometimes up to 20 languages on the very same island. What explains this difference?
+Fig.~\ref{RO_overnight_coloured_dots} shows islands of Oceania. Languages are points, coloured by language family. In the Polynesian islands (S\={a}moa, Tonga, Rarotonga, Tokelau etc) there is generally one language per island group. However, in central west Remote Oceania (Vanuatu, Temotu, Fiji and Kanaky) there are many more languages --- sometimes up to 20 languages on the very same island. What explains this difference?
 %What are the mechanics of this?
 
 \begin{sidewaysfigure}[p]
 \centering
 \includegraphics[width=24cm]{CartoGIS_oceania_languages_subgreions_edited.png}
-\caption{Map of Oceania, with the regions of Near and Remote Oceania marked out (first lablled by \citet{pawley1973dating}
-). Points represent languages, according to \citet }
+\caption{Map of Oceania, with the regions of Near and Remote Oceania marked out (first labelled by \citet{pawley1973dating}
+). Points represent languages, based on data \citet{glottolog3} with a few small adjustments by author.} 
 \label{RO_overnight_coloured_dots}
 \end{sidewaysfigure}
 
+Let us first consider some plausible factors in language diversification. Firstly, diversification takes time. We would expect a higher probability of language diversification in areas where people have lived for a longer time simply due to natural drift as communities spread out and form separate clusters. All of Remote Oceania was settled in the last 3,600 years, but at different stages. A large part of Remote Oceania was settled for the first time by Austronesian speaking people in a rapid expansion 3,600 - 2,800 BP known as the ``Lapita expansion'' (\citet[106-7]{bellwood2006austronesians}; \citet[137]{rieth_cochrane_2018}). This first area covers all islands of Vanuatu, Temotu, New Caledonia, Fiji and parts of Western Polynesia. The dates of the first settlement for these islands are relatively similar, but there still is a large discrepancy in the number of languages (see Fig \ref{RO_overnight_coloured_dots}). This makes for a convenient case for comparison. If we include other regions of Oceania, such as Australia or New Guinea, the comparison becomes more complex as they have been settled for a much much longer time-span, possibly up to 60,000 years. Here we focus specifically on Remote Oceania in order to test specific theories about the diversification there that have been presented by anthropologists and linguists.
 
+Let us compare two island groups in this region as an example: the S\={a}moa archipelago in Western Polynesia and the island of Malakula in Vanuatu. There is one indigenous language spoken in  S\={a}moa ---  S\={a}moan --- and in Malakula there are 33 distinct languages spoken. S\={a}moa was settled approximately 400 years after Malakula \citep[137-8]{rieth_cochrane_2018}. This gives Malakula a bit of a ``head-start'', but most likely not enough to explain the vast difference. Besides time depth, we might also expect that more space entails greater language diversity. A larger area makes it possible to spread out and become isolated from each other, which can entail language splitting. However, the shoreline\footnote{Since Austronesian settlements are mainly found on the coast, we are comparing shorelines instead of land area.} of Malakula is 67\% of that of S\={a}moa. What factors are there that can aid our understanding here?
 
+\citet{turner1884} and \citet{pawley81,pawley2007} have suggested that the discrepancy between the number of languages in different parts of Remote Oceania can be related to societal structure. Societies in Vanuatu and New Caledonia tend to be less hierarchical than societies in Polynesia. Societies with fewer vertical levels of political structure are associated with more linguistic and cultural diversity. Conversely, more hierarchically complex societies are associated with linguistic and cultural homogeneity. This hypothesis does not necessarily entail that individual leaders in more stratified societies have a direct effect on the nature of the language of the community by means of their personality, conscious policies or directives. Instead, it is more likely that the political structure is indicative of different kinds of community network structures and attitudes. Section \ref{sec:previous_research} teases out this line of argumentation in more detail.
 
+%A measurement of so-called ``political complexity'' in ethnographic surveys (c.f. \citet{gray1998ethnographic}) should then be correlated with different patterns of interaction and show up as a significant factor in language diversification. This is true even if political complexity is merely a proxy measurement of the interaction pattern that is in fact driving language change. 
 
-Diversification takes time. We would expect a higher probability of language diversification in areas where people have lived for a longer time simply due to natural drift as communities spread out and form separate clusters. A large part of Remote Oceania was settled for the first time by Austronesian speaking people in a rapid expansion 3,600 - 2,800 BP known as the ``Lapita expansion'' (\citet[106-7]{bellwood2006austronesians}; \citet[137]{rieth_cochrane_2018}). This area covers all islands of Vanuatu, Temotu, New Caledonia, Fiji and parts of Western Polynesia. These dates of first settlement for these islands are relatively similar, but there still is a large discrepancy in number of languages. This makes for a natural experiment which we can use to test hypotheses about language diversification.
-
-Let us compare two islands in this region as an example: S\={a}moa in Western Polynesia and Malakula in Vanuatu. S\={a}moa was settled approximately 400 years after Malakula  \citep[137-8]{rieth_cochrane_2018}, a relatively short span of time with respect to language diversification. Besides time depth, we might also expect that greater land mass entails greater language diversity. A larger area promotes increased population spread, leading to language isolation. The shoreline\footnote{Since Austronesian settlements are mainly found on the coast, we are comparing shorelines instead of land area in this example. The data of this study contains information on land area, land area + water; and shoreline.} of Malakula is 67\% of that of S\={a}moa. Given these two facts and our assumptions, we might expect S\={a}moa and Malakula to have similar numbers of languages, or perhaps even that Malakula has fewer. However, S\={a}moa sports \emph{one} indigenous language and Malakula has \emph{thirty-three} \citep{glottolog40}. Why is this?
-
-%\citet{Pacheco_Coelho_2019} and \citet[119]{lynchrosscrowleyinternalsubgroupingoceanic} 
-
-\citet{turner1884} and \citet{pawley81,pawley2007} have suggested that the discrepancy between the number of languages in different parts of Remote Oceania can be related to societal structure. Societies in Melanesian Remote Oceania tend to be less hierarchical than societies in Western Polynesia, and societies with fewer vertical levels of political structures are associated with more linguistic and cultural diversity. Conversely, more hierarchically complex societies are associated with linguistic and cultural homogeneity. This hypothesis does not necessarily entail that individual leaders in more stratified societies have a direct effect on the nature of the language of the community by means of their personality, conscious policies or directives. Instead, it is more likely that the political structure is indicative of different kinds of community network structures and attitudes. A measurement of so-called ``political complexity'' in ethnographic surveys (c.f. \citet{gray1998ethnographic}) should then be correlated with different patterns of interaction and show up as a significant factor in language diversification. This is true even if political complexity is merely a proxy measurement of the interaction pattern that is in fact driving language change. 
-
-This study tests this hypothesis by constructing a model where we try to predict the number of languages per island group using data on \textit{settlement time}, \textit{environment} and \textit{political complexity}. Environmental factors are included because it has been suggested that they are also drivers of language diversity (c.f. \citet{NETTLE1998}, \citet{gavin2012island} and \citet{hua2019ecological}). If the results show that political complexity has a significant correlation with the number of languages per island group when other relevant factors are controlled for, this lends support to Turner and Pawley's hypothesis.
+This study tests the hypothesis that more vertical levels of political organisation is meaningfully connected to the number of languages, also when we incorporate other possible factors like settlement time, size and carrying capacity (c.f. \citet{NETTLE1998}, \citet{gavin2012island} and \citet{hua2019ecological}). If the results show that political complexity has a significant correlation with the number of languages per island group when other relevant factors are controlled for, this lends support to Turner and Pawley's hypothesis.
  
 %We will be using cultural data on societal structures in societies of Remote Oceania, archaeological dates and environmental variables (temperature and rainfall) to test if the political structure still significantly predicts the number of languages once other factors have been taken into account. Fig.~\ref{RO_overnight_coloured_dots} shows languages in Oceania, with islands grouped by overnight sailing distances \citep{mark_1986, marck2000}. In this study, we are concerned with languages of Remote Oceania (see Fig.~\ref{Remote_Oceania_subregions} for subregions of Oceania), and in particular Vanuatu and New Caledonia compared to the rest.
 
@@ -184,16 +210,16 @@ This study tests this hypothesis by constructing a model where we try to predict
 \FloatBarrier
 \section{Previous research}
 \label{sec:previous_research}
-Linguists, anthropologists and scholars of other fields have long remarked on the link between linguistic diversity and political structure in Remote Oceania. One of the oldest examples of this observation is Turner who traveled in the region 1861-1884 and hypothesized that the lack of regional variation \emph{within} S\={a}moan entailed that they had long had a more centralized government \citep[172]{turner1884}. Linguists have linked types of societal organization to diversification processes. Language change is embedded in social structure (c.f. \citep{WLH1968}), or as \citet[124]{grace_1992_aberrant} writes: \emph{linguistic similarities and differences [are] reflections of community structures}. As community ties weaken and what was once one network splits in twain, we expect that this is reflected in language variation as well.
+Linguists, anthropologists and scholars of other fields have long remarked on the link between linguistic diversity and political structure in Remote Oceania. One of the oldest examples of this observation is Turner who travelled in the region 1861-1884 and hypothesized that the lack of regional variation \emph{within} S\={a}moan entailed that they had long had a more centralized government \citep[172]{turner1884}. Linguists have linked types of societal organization to different diversification processes. Language change is embedded in social structure (c.f. \citep{WLH1968}), or as \citet[124]{grace_1992_aberrant} writes: \emph{linguistic similarities and differences [are] reflections of community structures}. As community ties weaken and what was once one social network splits in twain, we expect that this is reflected in language variation as well. In this way, language studies provide insights to neighbouring fields such as archaeology, anthropology etc.
 
-\citet{pawley81, pawley2007} discusses the specific hypothesis that while Western Polynesia and ``Melanesian'' Remote Oceania (Vanuatu, Temotu, Fiji and New Caledonia) were settled in similar ways by Austronesian speaking people, and at comparable time depths, and developed similarly immediately after first settlement, the differences between them stem from the rise of powerful chiefs and maintenance of long-distance voyaging in the island groups of Polynesia. This theory suggests that the steps of the diversification process were more or less the same, but that the \emph{rate} by which it progressed differed and that this is the cause for the variation we see today.\footnote{\citet{lynch1981melanesian} calls this ``the diversification cycle theory''.} The societal structure in Polynesia was such that the process of cultural diversification was slower than in Vanuatu and New Caledonia. The following quote from \citet{pawley2007} summarises a few of these points and links them to political organisation:
+\citet{pawley81, pawley2007} discusses the specific hypothesis that while much of Remote Oceania was settled in similar ways by Austronesian-speaking people, and at comparable time depths, and developed similarly immediately after first settlement, the differences between them stem from the rise of powerful chiefs and maintenance of long-distance voyaging in the island groups of Polynesia. This theory suggests that the steps of the diversification process were more or less the same, but that the \emph{rate} by which it progressed differed and that this is the cause for the variation we see today.\footnote{\citet{lynch1981melanesian} calls this ``the diversification cycle theory''.} The societal structure in Polynesia was such that the process of cultural diversification was slower than in Vanuatu and New Caledonia. The following quote from \citet{pawley2007} summarises a few of these points and links them to the political organisation:
 
 %This diversification process has two stages. First, there are similar sequences of rapid expansion over the entire island group, and sparse settlement with trade and marriages between different sister communities. Second, there is denser settlement associated with localised trade and marriage practices between sister communities, more intensive agriculture and weakening of kin ties and linguistic divergence. 
 
 \begin{quotation}
 \noindent \emph{In [Fiji and West Polynesia] the maintenance of long-distance voyaging, both within island groups and between neighbouring island groups, can be attributed in large part to the rise of powerful chiefs. These chiefs had political, economic and social motives for maintaining long distance connections and were able to use their authority to drive the production of a food surplus which in turn could be used to support specialist craftsmen who could, among other things, build and sail large ocean-going canoes.} \citep[28]{pawley2007} \end{quotation}
 
-This proposal by \citet{pawley81, pawley2007} can be expressed in a Directed Acyclic Graph (DAG, c.f. \citet{pearl1995causal} and \citet{mcelreath2020statistical}. Figure \ref{Predicting_lgs_DAG_andy} contains such a graph, based on the author's interpretation of Pawley's proposal.
+This proposal by \citet{pawley81, pawley2007} can be expressed in a Directed Acyclic Graph (DAG, c.f. \citet{pearl1995causal} and \citet{mcelreath2020statistical}. This lets us view the chain of argumentation in a stylized and formal visualisation that can lead directly to statistical modelling and comparison between proposals (c.f. \citet{roberts2020chield}). Figure \ref{Predicting_lgs_DAG_andy} contains such a graph, based on the author's interpretation of Pawley's proposal in more detail. The connection between the rise of powerful chiefs and language richness is not direct, but mediated through a number of other factors. However, many of these factors are more difficult to measure, whereas ``political complexity'' is a variable in the Ethnographic Atlas (c.f. \citet{gray1998ethnographic}).
 
 \begin{figure}[ht]
 \centering
@@ -202,13 +228,18 @@ This proposal by \citet{pawley81, pawley2007} can be expressed in a Directed Acy
 \label{Predicting_lgs_DAG_andy}
 \end{figure}
 
-In a similar vein, we have the proposal by \citet{curriemace2009} that more stratified societies are correlated with larger language areas among languages of Africa and Eurasia. If one language covers a large area, then the number of languages per square kilometer is lower than otherwise --- the language density is lower. Their research can be interpreted to mean that more stratified societal structures are more capable of sustaining linguistic homogeneity over a larger geographical area (or possibly reduce diversity by cultural dominance and warfare). Greater maintenance of cultural homogeneity would result in less language splitting over larger areas, and therefore a larger language area correlates with greater stratification. 
+In a similar vein, \citet{curriemace2009} suggests that more stratified societies are correlated with larger language areas in Africa and Eurasia. If one language covers a large area, then the number of languages per square kilometre is lower than otherwise --- the language density is lower. Their research can be interpreted to mean that more stratified societal structures are more capable of sustaining linguistic homogeneity over a larger geographical area (or possibly reducing diversity by cultural dominance and warfare). Greater maintenance of cultural homogeneity would result in less language splitting over larger areas, and therefore a larger language area correlates with greater stratification. The approach is different from \citet{pawley81, pawley2007}, but the scientific line of argumentation is congruent.
 
-Returning to Oceania; \citet[104]{lynch1981melanesian} have stressed the relevance of contact with non-Austroneisan communities from New Guinea, Bismarck, Bougainville and Solomon Islands as a key factor in explaining why there are more Oceanic languages per island group in those regions and in Vanuatu compared to the rest of Oceania \footnote{\citet{lynch1981melanesian} uses the terms ``Papuan'' and contrasts Melanesia and Polynesia. I have chosen to summarise him here in more precise terms in relation to how his work impacts the current study. He writes specifically about the influence from languages of New Britain, Bougainville, central Solomon Islands, Manus and the southeast of New Guinea mainland (Oro province, Milne Bay province and National Capital District) on Oceanic languages of those regions and in Temotu.}. Lynch does not offer a precise account but outlines several different potential scenarios whereby contact with non-austronesian groups caused greater diversification among Oceanic languages.
+Returning to Oceania; all indigenous communities of Remote Oceania (see Fig \ref{RO_overnight_coloured_dots}) speak languages of the Austronesian family. This family has its ultimate origins in Taiwan, and spread into the region approximately 3-4,000 years ago.
 
-%mailu, daga, b Binandere east ppua (new britain, bougainville and sol,oms, manus oro province, milne bay
 
-Recent studies of ancient DNA \citep{lipson_harvad_ancient_dna_vanuatu_2018, posth_jena_ancient_dna_vanuatu_2018} have shown that there is evidence of significant levels of genes that are associated with origins in non-Austronesian speaking communities of Near Oceania into Vanuatu. These results from studies of ancient genomes lend support to the hypothesis that contact between Austronesian and Papuan people in ancient times could have impacted the differences in language diversification rates that we see in the region. However, unfortunately, there is not enough data for this to be included as a factor in the analysis of this study but it may be approximated by proxy-variables such as time depth of settlement
+\citet[104]{lynch1981melanesian} has stressed the relevance of contact with non-Austroneisan communities from New Guinea, Bismarck, Bougainville and the Solomon Islands as a key factor in explaining why there are more languages in Vanuatu compared to the rest of Oceania \footnote{\citet{lynch1981melanesian} uses the terms ``Papuan'' and contrasts Melanesia and Polynesia. I have chosen to summarise him here in more precise terms in relation to how his work impacts the current study. He writes specifically about the influence of languages of New Britain, Bougainville, central Solomon Islands, Manus and the southeast of New Guinea mainland (Oro province, Milne Bay province and National Capital District) on Oceanic languages of those regions and in Temotu.}. Lynch does not offer a precise account but outlines several different potential scenarios whereby contact with non-Austronesian groups caused greater diversification among Oceanic languages.
+
+Recent studies of ancient DNA \citep{lipson_harvad_ancient_dna_vanuatu_2018, posth_jena_ancient_dna_vanuatu_2018} have shown that there is evidence of significant levels of genes that are associated with origins in non-Austronesian speaking  communities from New Guinea and Solomons among Vanuatu people. Likewise, further studies such as \citet{liu2022ancient} show similar influence from New Guinea and Solomons northwards in Palau, Chuuk and Pohnpei island groups. It is becoming increasingly clear in the overall scientific literature on the ancient history of Oceania that there were a lot more connections and interactions than previously postulated. It is not the case that people travelled to one place, and then stayed put with little influence from other people of Oceania. Oceania is an interconnected place today, and it was historically too.
+
+
+These results from studies of ancient genomes lend support to the hypothesis that there was contact between Austronesian and non-Austronesian people from the islands of New Guinea and Solomons people in ancient times. This in turn, could be linked to the differences in political structure \emph{as well as} the language diversification.
+%could have impacted the differences in language diversification rates that we see in the region. However, unfortunately, there is not enough data for this to be included as a factor in the analysis of this study but it may be approximated by proxy-variables such as time depth of settlement
 
 
 %\emph{\textcolor{red}{(Note to Andy, Simon, Mark and Nick: it is possible to include Papuan contact as a rather granular variable in the analysis. I have tried running a variable that just classifies each island group as "Melanesian" or "Not Melanesian" for example. That variable did not come out as significantly predicting the language diversity. It also felt a bit too crude. I talked to Beth about it and she recommended me to leave it out. However, if you would like I can keep it in and give caveats. I don't know yet of any DNA study that I can use for this. Both Posth et al and Lipson et al don't sample New Caledonia or Fiji at all, which makes it tricky to use here.)}}
@@ -332,11 +363,11 @@ Both models include political complexity as a statistically significant factor f
 
 A counterexample to this trend globally is the presence of large areas covered by language societies with low political complexity and majority pastoralist subsistence strategies. \citet{curriemace2009} found such cases, but their results concluded that the best predictor for the overall global patterns in their data was still political complexity. Another possible counterexample might be regions of many societies with high complexity where each society covers a small area in close proximity to each other. This is arguably the case for historic city states in Ancient Greece as these covered fairly small areas and had many political levels (see \citet{cartwright_2013}, and \citet[19]{sealey1976history}). However, the city states of Ancient Greece are usually all described as speaking different dialects of the same language, not different languages. This means that the language area of Ancient Greek (which is what \citet{curriemace2009} measured) would still be large and the average political complexity high, which would support their hypothesis.
 
-\citet{curriemace2009} argue that the reason behind their results (higher political complexity = larger language areas) is that societies with higher political complexity are more likely to be able to replace existing groups in an area, or otherwise incorporate them. In his theory of language diversification in Remote Oceania, \citet{pawley2007} writes that the islands of Melanesian Remote Oceania and Western Polynesia were colonised in a similar manner but that the divergence was slowed down in West Polynesia and Fiji due to the rise of powerful political leaders who had a vested interest in the \emph{maintenance} of long distance voyaging and large scale food production. It may also be the case that diversity in Polynesia was reduced by later expansionist efforts by societies with higher political complexity. For example, the island of Niuafo'ou which lies between Tonga, 'Uvea and S\={a}moa is home to a language which is most closely related to 'Uvean. This language has however become \emph{more} similar to Tongan during the period of Tongan domination in the area 1000-1300's (see \citet{aswani1998tongan} and \citep[2-9]{tuskamoto_niuafoou}). It may be that politically complex societies do not only \emph{maintain} homogeneity by continuing being in contact after first settlement, but can also reduce diversity which emerges after settlement through incorporation and cultural dominance later.
+\citet{curriemace2009} argue that the reason behind their results (higher political complexity = larger language areas) is that societies with higher political complexity are more likely to be able to replace existing groups in an area, or otherwise incorporate them. In his theory of language diversification in Remote Oceania, \citet{pawley2007} writes that the islands of Vanuatu, New Caledonia and Western Polynesia were colonised in a similar manner but that the divergence was slowed down in West Polynesia and Fiji due to the rise of powerful political leaders who had a vested interest in the \emph{maintenance} of long distance voyaging and large scale food production. It may also be the case that diversity in Polynesia was reduced by later expansionist efforts by societies with higher political complexity. For example, the island of Niuafo'ou which lies between Tonga, 'Uvea and S\={a}moa is home to a language which is most closely related to 'Uvean. This language has however become \emph{more} similar to Tongan during the period of Tongan domination in the area 1000-1300's (see \citet{aswani1998tongan} and \citep[2-9]{tuskamoto_niuafoou}). It may be that politically complex societies do not only \emph{maintain} homogeneity by continuing being in contact after first settlement, but can also reduce diversity which emerges after settlement through incorporation and cultural dominance later.
 
 \citet{watts_2018} found that politically complex societies in Oceania became Christian at a faster speed. This may indicate that changes propagate through a population quicker if the society is not egalitarian. If Christianity spreads faster in societies with higher complexity, it is possible to reason that other changes also might spread faster. If changes propagate quickly throughout a population, that leaves less possibility for diversification through natural drift or groups in the periphery staying more archaic compared to the centre. This interpretation relies on the understanding that the variable for political complexity (EA033) reveals something not only about jurisdictional power relationships in a given society, but also captures something about the social network of \emph{all} of its members (not just the leaders). Under this theory, people living in societies with higher political complexity would be able to travel further and have wider ranging social networks, which in turn would lead to greater internal cultural homogeneity.
 
-It should also be noted that these preliminary results do not answer the question why Melanesian Remote Oceanic societies are indeed less politically complex. Nor do they disprove the hypothesis that there are more languages in Melanesian Remote Oceania because of influence from non-Austronesian migrants (c.f. \citet{lynch1981melanesian}). It is possible that there are more languages \emph{and} lower political complexity because of non-Austronesian contact but that these two variables are not actually related to \emph{each other} (c.f. Galton's problem \citep{naroll1965galton}). 
+It should also be noted that these preliminary results do not answer the question why Vanuatu societies are indeed less hierarchically politically complex. Nor do they disprove the hypothesis that there are more languages in Melanesian Remote Oceania because of influence from non-Austronesian migrants (c.f. \citet{lynch1981melanesian}). It is possible that there are more languages \emph{and} lower political complexity because of non-Austronesian contact but that these two variables are not actually related to \emph{each other} (c.f. Galton's problem \citep{naroll1965galton}). 
 
 %It is beyond the scope of this study to fully investigate the causality of language diversification in Remote Oceania. Causality in cultural evolution is very complicated, since factors can interact on many levels and it is difficult to control for unknown variables and proxy effects (c.f \citet{roberts2013linguistic}). In this instance, we will be satisfied with testing if there is a correlation between societal structure and language diversity that is still signifncant once environmental and settlement time has been incorporated into the model.
 
@@ -378,7 +409,7 @@ Future studies should use a grid and/or otherwise more fine grained approach to 
 \section*{Acknowledgements}
 I am fortunate enough to have colleagues in academia who have been generous enough to discuss conceptual methodological matters with me, these are Stephen Mann, Angela Chira, Russell Gray, Oleg Sobchuk, Richard McElreath, Tiago Tresoldi, Michael Dunn, Hannah Haynie, Outi Vesakoski, Fredric Blum and Luke Maurits. I am also grateful for the advice of Mary Walworth, Paul Geraghty and Alexandre François concerning language classification and Matthew Spriggs, Geoff Kushnick and Christopher Ballard regarding archaeology and anthropology of Oceania.
 
-I also want to thank my PhD supervisors who reviewed earlier versions of this study for my thesis and provided insightful input; Nicholas Evans, Andrew Pawley, Mark Ellison and Simon Greenhill.
+I also want to thank my PhD supervisors who reviewed earlier versions of this study for my thesis \citep{skirgaard2020multilevel} and provided insightful input; Nicholas Evans, Andrew Pawley, Mark Ellison and Simon Greenhill.
 
 Any mistakes and misconceptions that remain are my own.
 
@@ -718,7 +749,7 @@ To understand the vast majority of human history and diversification, we should 
 Keeping those problems in mind we can still explore the relationship between the total population of modern countries and number of languages. The aforementioned reasons will introduce noise and modern countries are not meaningful historically (see \ref{sec:island_geo}. 
 
 
-Figs \ref{fig:un_pop_plot} and \ref{ig:un_pop_plot_log10}
+Figs \ref{fig:un_pop_plot} and \ref{fig:un_pop_plot_log10}
 
 <insert paragraph about population size and number of languages being connected and link back to carrying capacity.>
 
